Revision history for Perl module CPAN::Mini::Webserver:

0.44
     - autogenerate the CSS and Images template files

0.43 Thu Sep 18 17:14:50 BST 2008
     - add an abstract to the Makefile.PL
     - add a human-readable license
     - make the Makefile.PL non-executable

0.42 Sun Sep  7 09:31:44 BST 2008
     - add a documentation section to the distribution page
       (patch by tokuhirom)
     - hide sections on the distribution page without any content

0.41 Thu Aug 28 15:39:02 BST 2008
     - drop the header font size a little
     - refactored out a bunch of methods, turned into calls to 
       direct_to_template (patch by markf)
     - remove useless commented out code (patch by markf)
     - correct out of date comment (patch by markf)
     - refactored the skipping into the WebserverTester, avoided 
       starting the webserver twice in simple.t, made simple.t
       ascii not utf8 (patch by markf)
     - view anything.PL as raw. This is because we want Makefile.PL
       and Build.PL marked up as perl, not viewed as pod (patch
       by markf)
     - unbreak bonjour publishing (patch by miyagawa)
     - move the archive code into Archive::Peek and require it, with
       the bonus of being able to explore distributions which are 
       packaged as .zip files

0.40 Fri Aug 22 09:24:54 BST 2008
     - improve the test suite (patch by markf)
     - detect installed modules properly (patch by rjbs)
     - index CamelCase distributions and modules so that you can
       search for both "camel", "case" and "camelcase"
     - use PAUSE names if 00whois.xml is mirrored (patch by martijn)
     - add info like email/homepage and some links to other 
       cpan-related pages for the author (patch by martijn)
     - make an empty search give "No results found", rather than
       an error (noticed by corion)
     - make the webserver work as a local CPAN mirror so that you can
       point CPAN or CPANPLUS at it (idea by markf)